--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ICONIC MOBILE DETAILS - Mobile Car Detailing Service</title>
   <style>
@@ -81,11 +81,15 @@
       background-color: #ffa500;
     }
     .review-form {
+      /* Center the form with symmetrical edges */
       display: none;
       background: #222;
-      padding: 1rem;
+      padding: 1.5rem;
       border-radius: 8px;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
     .review,
     .booking {
@@ -106,21 +110,116 @@
       color: #fff;
     }
     select:invalid {
-      color: #aaa;
+      color: #aaa; /* Gray text if default option is selected */
     }
-    /* Style date and time picker icons to match the yellow/orange theme */
+    /* Style the date and time picker icons for WebKit browsers */
     input[type="date"]::-webkit-calendar-picker-indicator,
     input[type="time"]::-webkit-calendar-picker-indicator {
-      filter: invert(57%) sepia(100%) saturate(415%) hue-rotate(1deg) brightness(105%) contrast(101%);
+      filter: invert(80%) sepia(100%) saturate(200%) hue-rotate(10deg);
       cursor: pointer;
     }
   </style>
+
+  <!-- 1) Google Places API for location autocomplete -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrknObLQYnc8reQsfs6Y4sTqXtoT1I3hI&libraries=places"></script>
+
   <script>
+    /* ---------------- GOOGLE PLACES AUTOCOMPLETE ---------------- */
+    function initAutocomplete() {
+      const locationInput = document.getElementById('location');
+      if (locationInput) {
+        new google.maps.places.Autocomplete(locationInput, {
+          // 'address' or 'geocode' are typical usage
+          types: ['geocode']
+        });
+      }
+    }
+
+    /* ---------------- NHTSA VEHICLE YEAR/MAKE/MODEL ---------------- */
+    async function populateVehicleYears() {
+      const yearSelect = document.getElementById('vehicleYear');
+      const currentYear = new Date().getFullYear();
+      // Populate years descending from current year to 1980
+      for (let y = currentYear; y >= 1980; y--) {
+        const option = document.createElement('option');
+        option.value = y;
+        option.textContent = y;
+        yearSelect.appendChild(option);
+      }
+    }
+
+    async function fetchMakesByYear(year) {
+      const makeSelect = document.getElementById('vehicleMake');
+      const modelSelect = document.getElementById('vehicleModel');
+
+      // Reset the makes and models each time a new year is selected
+      makeSelect.innerHTML = '<option value="" disabled selected>Make</option>';
+      modelSelect.innerHTML = '<option value="" disabled selected>Model</option>';
+
+      if (!year) return;
+
+      // Example NHTSA endpoint for listing makes by year and vehicle type
+      const url = `https://vpic.nhtsa.dot.gov/api/vehicles/GetMakesForVehicleType/car?year=${year}&format=json`;
+
+      try {
+        const response = await fetch(url);
+        const data = await response.json();
+        if (data && data.Results) {
+          data.Results.forEach(item => {
+            const option = document.createElement('option');
+            option.value = item.MakeName;
+            option.textContent = item.MakeName;
+            makeSelect.appendChild(option);
+          });
+        }
+      } catch (error) {
+        console.error('Error fetching makes:', error);
+      }
+    }
+
+    async function fetchModelsByYearMake(year, make) {
+      const modelSelect = document.getElementById('vehicleModel');
+      modelSelect.innerHTML = '<option value="" disabled selected>Model</option>';
+
+      if (!year || !make) return;
+
+      // Example NHTSA endpoint for listing models by year and make
+      const url = `https://vpic.nhtsa.dot.gov/api/vehicles/GetModelsForMakeYear/make/${make}/modelyear/${year}?format=json`;
+
+      try {
+        const response = await fetch(url);
+        const data = await response.json();
+        if (data && data.Results) {
+          data.Results.forEach(item => {
+            const option = document.createElement('option');
+            option.value = item.Model_Name;
+            option.textContent = item.Model_Name;
+            modelSelect.appendChild(option);
+          });
+        }
+      } catch (error) {
+        console.error('Error fetching models:', error);
+      }
+    }
+
     document.addEventListener('DOMContentLoaded', () => {
+      /* Initialize Google Places Autocomplete */
+      initAutocomplete();
+
+      /* Initialize NHTSA year list and attach event listeners */
+      populateVehicleYears();
+      document.getElementById('vehicleYear').addEventListener('change', function() {
+        fetchMakesByYear(this.value);
+      });
+      document.getElementById('vehicleMake').addEventListener('change', function() {
+        const year = document.getElementById('vehicleYear').value;
+        fetchModelsByYearMake(year, this.value);
+      });
+
+      /* ---------------- NAVIGATION TABS ---------------- */
       const links = document.querySelectorAll('nav a');
       const sections = document.querySelectorAll('section');
 
-      // Navigation switching between sections
       links.forEach(link => {
         link.addEventListener('click', () => {
           const targetId = link.getAttribute('href').replace('#', '');
@@ -135,7 +234,7 @@
         });
       });
 
-      /* ------------------------ REVIEWS FUNCTIONALITY ------------------------ */
+      /* ---------------- REVIEWS FUNCTIONALITY ---------------- */
       document.getElementById('reviewButton').addEventListener('click', () => {
         document.getElementById('reviewForm').style.display = 'block';
       });
@@ -172,40 +271,42 @@
       }
       loadReviews();
 
-      /* ------------------------ BOOKING FUNCTIONALITY ------------------------ */
+      /* ---------------- BOOKING FUNCTIONALITY ---------------- */
       document.getElementById('bookingButton').addEventListener('click', () => {
         const bookingForm = document.getElementById('bookingForm');
         bookingForm.style.display = bookingForm.style.display === 'block' ? 'none' : 'block';
       });
 
-      // Auto-blur on change for date and time fields to close the selection screen
+      // Auto-close date/time picker after a selection
       document.getElementById('cleaningDate').addEventListener('change', function() {
         this.blur();
       });
+      // For the time input, using 'change' + step=1800 to ensure 30-min increments
       document.getElementById('cleaningTime').addEventListener('change', function() {
         this.blur();
       });
 
       document.getElementById('submitBooking').addEventListener('click', async () => {
         // Gather booking data from the form
-        const serviceType   = document.getElementById('serviceType').value;
-        const dirtyLevel    = document.getElementById('dirtyLevel').value;
-        const vehicleColor  = document.getElementById('vehicleColor').value;
-        const make          = document.getElementById('make').value;
-        const model         = document.getElementById('model').value;
-        const location      = document.getElementById('location').value;
-        const customerName  = document.getElementById('customerName').value;
-        const phone         = document.getElementById('phone').value;
-        const email         = document.getElementById('email').value;
-        const cleaningDate  = document.getElementById('cleaningDate').value;
-        const cleaningTime  = document.getElementById('cleaningTime').value;
-        const comments      = document.getElementById('comments').value;
+        const serviceType  = document.getElementById('serviceType').value;
+        const dirtyLevel   = document.getElementById('dirtyLevel').value;
+        const vehicleColor = document.getElementById('vehicleColor').value;
+        const vehicleYear  = document.getElementById('vehicleYear').value;
+        const vehicleMake  = document.getElementById('vehicleMake').value;
+        const vehicleModel = document.getElementById('vehicleModel').value;
+        const location     = document.getElementById('location').value;
+        const customerName = document.getElementById('customerName').value;
+        const phone        = document.getElementById('phone').value;
+        const email        = document.getElementById('email').value;
+        const cleaningDate = document.getElementById('cleaningDate').value;
+        const cleaningTime = document.getElementById('cleaningTime').value;
+        const comments     = document.getElementById('comments').value;
 
-        // Ensure all required fields are filled (vehicle type removed)
+        // Basic validation for required fields
         if (
-          serviceType && dirtyLevel && vehicleColor && make &&
-          model && location && customerName && phone && email &&
-          cleaningDate && cleaningTime
+          serviceType && dirtyLevel && vehicleColor && vehicleYear &&
+          vehicleMake && vehicleModel && location && customerName &&
+          phone && email && cleaningDate && cleaningTime
         ) {
           // Check if the booking date is at least 2 days in advance
           const selectedDate = new Date(cleaningDate);
@@ -222,8 +323,9 @@
             `Service: ${serviceType}\n` +
             `Dirty Level: ${dirtyLevel}\n` +
             `Color: ${vehicleColor}\n` +
-            `Make: ${make}\n` +
-            `Model: ${model}\n` +
+            `Year: ${vehicleYear}\n` +
+            `Make: ${vehicleMake}\n` +
+            `Model: ${vehicleModel}\n` +
             `Location: ${location}\n` +
             `Comments: ${comments}\n` +
             `Late Notice Fee: $${lateNoticeFee}`;
@@ -238,7 +340,7 @@
             time: cleaningTime
           };
 
-          // Send booking data to the backend using the correct endpoint
+          // Send booking data to your backend
           const response = await fetch('https://iconicmobiledetails-backend.onrender.com/book', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
@@ -246,13 +348,14 @@
           });
 
           if (response.ok) {
-            alert("Booking submitted successfully! You will receive a confirmation via text and email shortly.");
+            alert("Booking submitted successfully! You and the admin will receive a confirmation via text and email shortly.");
             // Clear form fields
             document.getElementById('serviceType').value = '';
             document.getElementById('dirtyLevel').value = '';
             document.getElementById('vehicleColor').value = '';
-            document.getElementById('make').value = '';
-            document.getElementById('model').value = '';
+            document.getElementById('vehicleYear').value = '';
+            document.getElementById('vehicleMake').innerHTML = '<option value="" disabled selected>Make</option>';
+            document.getElementById('vehicleModel').innerHTML = '<option value="" disabled selected>Model</option>';
             document.getElementById('location').value = '';
             document.getElementById('customerName').value = '';
             document.getElementById('phone').value = '';
@@ -271,9 +374,10 @@
     });
   </script>
 </head>
-<body>
+<!-- Ensure initAutocomplete() is called on page load for Google Places -->
+<body onload="initAutocomplete()">
   <header>
-    <img src="logo.png" alt="ICONIC DETAILS Logo">
+    <img src="logo.png" alt="ICONIC DETAILS Logo" />
   </header>
 
   <nav>
@@ -289,24 +393,45 @@
     <h3>Our Services</h3>
     <!-- Add details or images about your services here -->
     <button id="bookingButton" class="button">Book Now</button>
+
     <div id="bookingForm" class="review-form">
       <select id="serviceType" required>
         <option value="" disabled selected>Select Your Service</option>
-        <option value="Entry Wash - $100">Entry Wash - $100</option>
-        <option value="Medium Wash - $200">Medium Wash - $200</option>
-        <option value="Advanced Wash - $400">Advanced Wash - $400</option>
-        <option value="Showroom Wash - $1000">Showroom Wash - $1000</option>
+        <option value="Mini Interior - $50">Mini Interior - $50</option>
+        <option value="Full Interior - $100">Full Interior - $100</option>
+        <option value="Mini Exterior - $50">Mini Exterior - $50</option>
+        <option value="Full Exterior - $100">Full Exterior - $100</option>
+        <option value="Full Detail - $150">Full Detail - $150</option>
       </select>
-      <input type="text" id="dirtyLevel" placeholder="Dirty Level (e.g., Light, Moderate, Heavy)" required>
-      <input type="text" id="vehicleColor" placeholder="Vehicle Color" required>
-      <input type="text" id="make" placeholder="Make" required>
-      <input type="text" id="model" placeholder="Model" required>
-      <input type="text" id="location" placeholder="Location" required>
-      <input type="text" id="customerName" placeholder="Your Name" required>
-      <input type="tel" id="phone" placeholder="Phone Number" required>
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="date" id="cleaningDate" required>
-      <input type="time" id="cleaningTime" required min="06:00" max="18:00">
+
+      <input type="text" id="dirtyLevel" placeholder="Dirty Level (e.g., Light, Moderate, Heavy)" required />
+      <input type="text" id="vehicleColor" placeholder="Vehicle Color" required />
+
+      <!-- NHTSA Year/Make/Model fields -->
+      <select id="vehicleYear" required>
+        <option value="" disabled selected>Year</option>
+        <!-- Populated dynamically in JS -->
+      </select>
+      <select id="vehicleMake" required>
+        <option value="" disabled selected>Make</option>
+        <!-- Populated dynamically in JS -->
+      </select>
+      <select id="vehicleModel" required>
+        <option value="" disabled selected>Model</option>
+        <!-- Populated dynamically in JS -->
+      </select>
+
+      <!-- Google Places Autocomplete -->
+      <input type="text" id="location" placeholder="Location (Address)" required />
+
+      <input type="text" id="customerName" placeholder="Your Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email" required />
+
+      <!-- 30-min increments between 6am and 6pm -->
+      <input type="date" id="cleaningDate" required />
+      <input type="time" id="cleaningTime" required min="06:00" max="18:00" step="1800" />
+
       <textarea id="comments" placeholder="Any additional comments..." rows="4"></textarea>
       <button id="submitBooking" class="button">Submit Booking</button>
     </div>
@@ -317,7 +442,7 @@
     <h3>Reviews</h3>
     <button id="reviewButton" class="button">Leave us a Review</button>
     <div id="reviewForm" class="review-form">
-      <input type="text" id="reviewName" placeholder="Your Name" required>
+      <input type="text" id="reviewName" placeholder="Your Name" required />
       <textarea id="reviewText" placeholder="Write your review here..." rows="4" required></textarea>
       <button id="submitReview" class="button">Post Review</button>
     </div>
